@startuml

title __ELEMENT's Class Diagram__\n

  namespace com.showcontrol4j.element {
    interface com.showcontrol4j.element.ShowElement {
        {abstract} + getId()
        {abstract} + getName()
    }
  }
  

  namespace com.showcontrol4j.element {
    abstract class com.showcontrol4j.element.ShowElementBase {
        # ID : Long
        # NAME : String
        - executor : ExecutorService
        - runningFuture : Future
        + ShowElementBase()
        + getBrokerHostname()
        + getId()
        + getMessageExchangeName()
        + getName()
        + toString()
        {abstract} # idleLoop()
        # pause()
        {abstract} # showSequence()
        {abstract} # shutdownProcedure()
        - analyzeMessage()
        - handleMessage()
        - registerShowElement()
        - runIdle()
        - runLoop()
        - runStop()
    }
  }
  

  namespace com.showcontrol4j.element {
    class com.showcontrol4j.element.ShowElementBase.MessageTask {
        + MessageTask()
        + run()
    }
  }
  

  com.showcontrol4j.element.ShowElementBase .up.|> com.showcontrol4j.element.ShowElement
  com.showcontrol4j.element.ShowElementBase o-- com.showcontrol4j.broker.BrokerConnectionFactory : brokerConnectionFactory
  com.showcontrol4j.element.ShowElementBase o-- com.showcontrol4j.exchange.MessageExchange : messageExchange
  com.showcontrol4j.element.ShowElementBase +-down- com.showcontrol4j.element.ShowElementBase.MessageTask
  com.showcontrol4j.element.ShowElementBase.MessageTask .up.|> java.lang.Runnable
  com.showcontrol4j.element.ShowElementBase.MessageTask o-- com.showcontrol4j.message.SCFJMessage : message


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
